--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Thanet Chomsri "Got"
-
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-architect
+title: My GitHub Page
+description: A modern Jekyll theme for GitHub Pages
