--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: My GitHub Page
-description: A modern Jekyll theme for GitHub Pages
+title:  TEERAPONG 
+description: Mutodeiei
