--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-title: Leap Day theme
-description: Leap Day is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-merlot
+title: My GitHub Page
+description: Elegant magazine-like theme
