--- a/_config.yml
+++ b/_config.yml
@@ -1,45 +1,1 @@
-title: "My GitHub Portfolio"
-description: "Showcasing my projects, skills, and experiences."
-theme: jekyll-theme-cayman
-
-
-markdown: kramdown
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
-
-
-author:
-  name: "Your Name"
-  email: "youremail@example.com"
-
-# Social Links
-social_links:
-  github: "https://github.com/yourusername"
-  linkedin: "https://www.linkedin.com/in/yourprofile"
-  youtube: ""
-  facebook: ""
-  instagram: ""
-
-
-plugins:
-  - jekyll-seo-tag
-  - jekyll-sitemap
-
-
-jekyll-seo-tag:
-  social:
-    name: "My GitHub Portfolio"
-    type: "website"
-
-
-google_analytics: ""
-
-
-exclude:
-  - README.md
-  - Gemfile
-  - Gemfile.lock
-
-
-show_downloads: false
+theme: jekyll-theme-midnight
